--- a/about/index.html
+++ b/about/index.html
@@ -6,6 +6,6 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body> 
-	<p> <a href="/logme/">ABOUT</a> | <a href="/shop/">SHOP</a>  | <a href="https://itunes.apple.com/us/app/log-me/id868425829?ls=1&mt=8">APP STORE</a> </p>
+	<p> <a href="/about/">ABOUT</a> | <a href="/shop/">SHOP</a>  | <a href="https://itunes.apple.com/us/app/log-me/id868425829?ls=1&mt=8">APP STORE</a> </p>
 </body>
 </html>
